2006-10-27  Jakub Jelinek  <jakub@redhat.com>

	* src/prelink.h (READWRITEPROTOSIZE): Undef after use.

2006-10-24  Richard Sandiford  <richard@codesourcery.com>

	* testsuite/tls3.sh: Use -fpic for MIPS too.
	* testsuite/reloc2.sh: Likewise.

	* testsuite/reloc4.sh: Use -mxgot when compiling for MIPS targets.
	* testsuite/reloc5.c (main): Make the printed inline asm globalize
	testzero.

	* testsuite/shuffle2.c (testzero): Globalize asm definition.

	* src/Makefile.am (arch_SOURCES): Add arch-mips.c
	* src/Makefile.in: Regenerate.
	* src/arch-mips.c: New file.

	* src/prelink.h (DT_MIPS_RLD_VERSION): Define.
	(DT_MIPS_TIME_STAMP): Likewise.
	(DT_MIPS_ICHECKSUM): Likewise.
	(DT_MIPS_IVERSION): Likewise.
	(DT_MIPS_FLAGS): Likewise.
	(DT_MIPS_BASE_ADDRESS): Likewise.
	(DT_MIPS_CONFLICT): Likewise.
	(DT_MIPS_LIBLIST): Likewise.
	(DT_MIPS_LOCAL_GOTNO): Likewise.
	(DT_MIPS_CONFLICTNO): Likewise.
	(DT_MIPS_LIBLISTNO): Likewise.
	(DT_MIPS_SYMTABNO): Likewise.
	(DT_MIPS_UNREFEXTNO): Likewise.
	(DT_MIPS_GOTSYM): Likewise.
	(DT_MIPS_HIPAGENO): Likewise.
	(DT_MIPS_RLD_MAP): Likewise.
	(R_MIPS_TLS_DTPMOD): Likewise.
	(R_MIPS_TLS_DTPREL): Likewise.
	(R_MIPS_TLS_TPREL): Likewise.
	(R_MIPS_GLOB_DAT): Likewise.
	(DSO): Add info_DT_MIPS_LOCAL_GOTNO, info_DT_MIPS_GOTSYM,
	and info_DT_MIPS_SYMTABNO.

	* src/dso.c (read_dynamic): Initialize the new DSO fields.
	(adjust_symbol_p): Handle stub values on MIPS.
	* src/prelink.c (prelink_prepare): Handle SHT_DYNAMIC and
	SHT_MIPS_REGINFO on MIPS.
	* src/space.c (find_readonly_space): Don't place the new section
	in the PT_PHDR segment.

	* src/prelink.h (data_iterator): New structure.
	(init_data_iterator): Declare.
	(get_data_from_iterator): Likewise.
	(get_sym_from_iterator): Likewise.
	* src/data.c (init_data_iterator): New function.
	(get_data_from_iterator): Likewise.
	(get_sym_from_iterator): Likewise.

	* src/prelink.h (READWRITEPROTOSIZE): New macro.  Instantiate
	READWRITEPROTO for big and little endian.  Add prototypes for