@@ -1,3 +1,9 @@
+2006-12-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* src/verify.c (prelink_verify): Unlink ent->filename in case of
+	failures between closing the unprelinked dso and unlinking
+	ent->filename.
+
 2006-10-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* src/prelink.h (READWRITEPROTOSIZE): Undef after use.
